--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 :root {
   /* Colors */
-  --color-strong-cyan: hsl(171, 66%, 44%);
+  --color-strong-green: hsl(171, 66%, 44%);
   --color-light-blue: hsl(233, 100%, 69%);
   --color-dark-grayish-blue: hsl(210, 10%, 33%);
   --color-grayish-blue: hsl(201, 11%, 66%);
@@ -25,10 +25,38 @@
   font-style: normal;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-image: url(./images/bg-header-mobile.png);
   background-size: contain;
   background-repeat: no-repeat;
+  font-family: 'Bai Jamjuree Regular', sans-serif;
+}
+
+h1, h2, h3 {
+  color: var(--color-dark-grayish-blue);
+  font-family: 'Bai Jamjuree Semi-Bold', sans-serif;
+}
+
+p {
+  color: var(--color-grayish-blue);
+  font-size: var(--font-size-body);
+}
+
+main, footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+img {
+  max-width: 100%;
 }
 
 @media (min-width: 1024px) {
