--- a/index.css
+++ b/index.css
@@ -59,6 +59,44 @@ img {
   max-width: 100%;
 }
 
+footer:not(.attribution) {
+  gap: 2.25rem;
+  padding: 2.25rem;
+  background-color: hsl(from var(--color-grayish-blue) h s l / 0.15);
+}
+footer .wrapper-start {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+footer .wrapper-start img {
+  width: 40%;
+}
+footer .wrapper-start nav {
+  display: flex;
+  flex-direction: column;
+  gap: 1.125rem;
+}
+footer .wrapper-start a {
+  color: var(--color-dark-grayish-blue);
+  text-decoration: none;
+}
+footer .wrapper-start a:hover {
+  color: var(--color-strong-green);
+}
+footer .social-media {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 50%;
+}
+footer .social-media img:active {
+  /* (T.B.D)
+   * Because beside filters, there is no way of 
+   * changing colors of SVGs loaded in <img> tags. */
+}
+
 @media (min-width: 1024px) {
   body {
     background-image: url(./images/bg-header-desktop.png);
