--- a/index.css
+++ b/index.css
@@ -69,32 +69,35 @@ footer .wrapper-start {
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-}
-footer .wrapper-start img {
-  width: 40%;
-}
-footer .wrapper-start nav {
-  display: flex;
-  flex-direction: column;
-  gap: 1.125rem;
-}
-footer .wrapper-start a {
-  color: var(--color-dark-grayish-blue);
-  text-decoration: none;
-}
-footer .wrapper-start a:hover {
-  color: var(--color-strong-green);
-}
+
+  img {
+    width: 40%;
+  }
+  nav {
+    display: flex;
+    flex-direction: column;
+    gap: 1.125rem;
+
+    a {
+      color: var(--color-dark-grayish-blue);
+      text-decoration: none;
+    }
+    a:hover {
+      color: var(--color-strong-green);
+    }
+  }
+} 
 footer .social-media {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 50%;
-}
-footer .social-media img:active {
-  /* (T.B.D)
-   * Because beside filters, there is no way of 
-   * changing colors of SVGs loaded in <img> tags. */
+
+  img:active {
+    /* (T.B.D)
+    * Because beside filters, there is no way of 
+    * changing colors of SVGs loaded in <img> tags. */
+  }
 }
 
 @media (min-width: 1024px) {
