--- a/index.css
+++ b/index.css
@@ -55,8 +55,49 @@ main, footer {
   text-align: center;
 }
 
+main {
+  margin: 8rem 2rem;
+  gap: 8rem;
+}
+
 img {
   max-width: 100%;
+}
+
+.btn-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  button {
+    height: 3rem;
+    border: 1px solid;
+    border-bottom: 3px solid;
+    border-radius: 3rem;
+    color: white;
+    font-family: 'Bai Jamjuree Semi-Bold', sans-serif;
+    font-size: 1.125rem;
+  }
+  :nth-child(1) {
+    background-color: var(--color-strong-green);
+    border-color: hsl(from var(--color-strong-green) h s calc(l - 10));
+  }
+  :nth-child(2) {
+    background-color: var(--color-light-blue);
+    border-color: hsl(from var(--color-light-blue) h calc(s - 15) calc(l - 10));
+  }
+}
+
+.hero {
+  .logo-large {
+    margin-block-end: 4rem;
+  }
+  .wrapper-start {
+    display: flex;
+    flex-direction: column;
+    margin-block-end: 2rem;
+    gap: 1rem;
+  }
 }
 
 footer:not(.attribution) {
