--- a/index.css
+++ b/index.css
@@ -126,8 +126,13 @@ img {
   .wrapper-start {
     margin-block-end: 0;
   }
-  .productivity-tool h3 {
-    margin-block: 2rem 1rem;
+  .item {
+    img {
+      margin-block-end: 2.5rem;
+    }
+    h3 {
+      margin-block-end: 1rem;
+    }
   }
 }
 
