--- a/index.css
+++ b/index.css
@@ -101,14 +101,23 @@ img {
     color: white;
     font-family: 'Bai Jamjuree Semi-Bold', sans-serif;
     font-size: 1.125rem;
+    cursor: pointer;
   }
   :nth-child(1) {
     background-color: var(--color-strong-green);
     border-color: hsl(from var(--color-strong-green) h s calc(l - 10));
   }
+  :nth-child(1):active {
+    background-color: hsl(from var(--color-strong-green) h s calc(l + 10));
+    border-color: var(--color-strong-green);
+  }
   :nth-child(2) {
     background-color: var(--color-light-blue);
-    border-color: hsl(from var(--color-light-blue) h calc(s - 15) calc(l - 10));
+    border-color: hsl(from var(--color-light-blue) h calc(s - 20) calc(l - 10));
+  }
+  :nth-child(2):active {
+    background-color: hsl(from var(--color-light-blue) h s calc(l + 10));
+    border-color: hsl(from var(--color-light-blue) h calc(s - 20) l);
   }
 }
 
